--- a/app/src/main/res/layout/activity_dgpsdata_tagg_menu.xml
+++ b/app/src/main/res/layout/activity_dgpsdata_tagg_menu.xml
@@ -23,7 +23,7 @@
                 android:layout_weight=".5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tagging of Static and RTX data for"
+                android:text="Tag Static,RTX and JXL data for"
                 android:textAlignment="center"
                 android:textColor="@color/colorBackground"
                 android:textSize="25sp"
@@ -70,6 +70,30 @@
                 android:layout_weight=".5"
                 android:background="@drawable/tag_static"
                 android:clickable="true" />
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/tag_jxl_file"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:layout_below="@+id/name_textView"
+                android:layout_weight=".5"
+                android:elevation="5dp"
+                android:background="@drawable/jxl"
+                android:clickable="true" />
+
 
 
 
