--- a/app/src/main/res/layout/activity_dgpsdata_view.xml
+++ b/app/src/main/res/layout/activity_dgpsdata_view.xml
@@ -5,5 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DGPSDataViewActivity">
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
