--- a/app/src/main/res/layout/dgps_map_legend.xml
+++ b/app/src/main/res/layout/dgps_map_legend.xml
@@ -93,6 +93,27 @@
                   android:layout_below="@+id/textUlbBoundary"
                   android:src="@drawable/green"
                  />
+            <TextView
+                android:id="@+id/txtNoSurvey"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="Points which are not feasible for Survey"
+                android:textColor="#000000"
+                android:layout_marginLeft="10dip"
+                />
+
+            <ImageView
+                android:id="@+id/imgNoSurvey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dip"
+                android:layout_marginLeft="10dip"
+                android:scaleType="fitXY"
+                android:layout_below="@+id/textUlbBoundary"
+                android:src="@drawable/map_grey"
+                />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
