--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,29 +37,31 @@
 
             <TextView
                 android:id="@+id/WelcomeTextView"
-                android:layout_weight=".7"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight=".7"
                 android:text="@string/welcome_back"
                 android:textAlignment="center"
                 android:textColor="@color/cast_expanded_controller_background_color"
                 android:textSize="25sp"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/macaddress"
                 android:layout_width="match_parent"
-                android:layout_weight=".3"
                 android:layout_height="0dp"
+                android:layout_weight=".3"
                 android:textAlignment="center"
                 android:textColor="@color/cast_expanded_controller_background_color"
                 android:textSize="15sp"
                 android:textStyle="italic" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
-            android:layout_marginTop="70dp"
             android:layout_height="0dp"
+            android:layout_marginTop="70dp"
             android:layout_weight="3"
             android:gravity="center"
             android:orientation="vertical">
@@ -104,6 +106,8 @@
                     android:textColorHint="@color/color1"
                     android:textSize="20sp" />
             </android.support.design.widget.TextInputLayout>
+
+
 
             <LinearLayout
                 android:id="@+id/otplinear"
@@ -164,26 +168,29 @@
                 </LinearLayout>
             </LinearLayout>
 
+
+
         </LinearLayout>
+
         <LinearLayout
-        android:id="@+id/linearloginbutton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/loginButton"
+            android:id="@+id/linearloginbutton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/button_drawable"
-            android:text="@string/login"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            />
-    </LinearLayout>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/button_drawable"
+                android:text="@string/login"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <ProgressBar
